Fix collapsed spacing

--- a/containers/ecr-viewer/src/styles/custom-styles.scss
+++ b/containers/ecr-viewer/src/styles/custom-styles.scss
@@ -66,6 +66,10 @@ h4 {
 .info-container > .usa-accordion__heading > .usa-accordion__button {
   font-size: 2rem;
   background-size: 2.25rem;
+
+  &[aria-expanded="false"] {
+    margin-bottom: 2.5rem;
+  }
 }
 
 .accordion-rr {
